# TradeNodeX-AI-Copy-Trading

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  USER_GUIDE_CN.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
deployments/: Dockerfile  FARGATE_RUNBOOK.md  ecs-task-api.json  ecs-task-worker.json
docs/: ARCHITECTURE.md  COMMUNITY.md  REPOSITORY_MARKETING.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  config.ts  index.css  types.ts
frontend/src/components/: ReadinessBadge.tsx
frontend/src/hooks/: useCopyTradeEditor.ts  useDashboardData.ts  useRealtimeStream.ts  useTerminalPreferences.ts
frontend/src/lib/: app-model.ts  format.ts
scripts/: release_gate.py  run_runtime.ps1  validate_private_streams.py
sql/: 001_init.sql
src/copytrading_app/: __init__.py  main.py
src/copytrading_app/api/: routes.py
src/copytrading_app/core/: config.py  dependencies.py
src/copytrading_app/db/: models.py  session.py
src/copytrading_app/domain/: enums.py  types.py
src/copytrading_app/repositories/: execution_repository.py  follower_repository.py  signal_repository.py
src/copytrading_app/schemas/: api.py
src/copytrading_app/services/: account_executor.py  command_builder.py  copy_trade_validation.py  fx.py  (+13 more)
tests/: conftest.py  test_api.py  test_exchange_clients.py  test_instrument_catalog.py  test_private_streams.py  test_scaling.py  test_signal_normalizer.py
(+38 files in other folders)
